
 - the `upsnotify()` common code introduced in recent NUT releases (integrating
   with service management frameworks, etc.) was a bit cryptic when it reported
   a *failure to notify* (e.g. when not running as a service currently), fixed
   now to report human-friendly text instead of internal enum codes. Follow-up
   to [issue #1590, PR #1777, PR #2136]

 - drivers, `upsd`, `upsmon`: reduce "scary noise" about failure to `fopen()`
   the PID file (which most of the time means that no previous instance of
   the daemon was running to potentially conflict with), especially useless
   since in recent NUT releases the verdicts from `sendsignal*()` methods
   are analyzed and lead to layman worded situation reports in these programs.
   [issue #1782, PR #2384]

 - drivers started with the `-FF` command-line option (e.g. wrapped into the
   systemd units to stay "foregrounded" *and* save a PID file anyway) should
   now also handle an existing PID file to interact with the earlier instance
   of the driver program, if still running (e.g. started manually). [#2384]

 - Drivers executed to force an UPS shutdown (with `-k` CLI option) should
   now try harder to kill off a daemonized sibling, if it still runs (and
   did not handle a `driver.killpower` INSTCMD well). [#2666]

 - Extended instant commands for driver reloading with a `driver.exit`
   command for a protocol equivalent of sending a `SIGTERM`, e.g. when
   a newer instance of the driver program tries to start. [#1903, #2392]

 - A new `NUT_QUIET_INIT_BANNER` envvar (presence or "true" value) can now
   prevent the tool name and NUT version banner from being unilaterally
   printed out when NUT programs start. [issues #1789 vs. #316; #2573]

 - Drivers would now report the socket they are listening on, and server
   would report full path to the driver socket it tries to connect to.
   A new `NUT_QUIET_INIT_LISTENER` envvar (presence or "true" value) can